...
        <TextInput
          style={styles.input}
          value={text}
          onChangeText={setText}
          multiline
          maxLength={50}
          placeholder="コメントを書く ✍"
          placeholderTextColor="#9E9E9E"
        />
      </View>
      <Pressable style={styles.sendButton} onPress={send}>
        <MaterialIcons name="send" size={20} color="#FFFFFF" />
      </Pressable>
...
