...
    //Tab(icon: Icon(Icons.recommend), text: 'Recommended News'),
    Center(child: Icon(Icons.fiber_new, size: 30)),
    Center(
        child: Row(children: [
      Icon(Icons.recommend, size: 30),
      SizedBox(width: 10),
      Text("for You")
    ], mainAxisAlignment: MainAxisAlignment.center)),
  ];

  @override
  Widget build(BuildContext context) {
    //print(context.runtimeType);
...
