...
  return (
    <View style={styles.container}>
      <Tab.Navigator
        screenOptions={innerTabScreenOptions}
        tabBar={(props) => <PillTabBar {...props} />}
      >
        <Tab.Screen name="History" options={{ tabBarLabel: labelRenderer('履歴') }}>
          {() => <HistoryList />}
        </Tab.Screen>
        <Tab.Screen name="Favorite" options={{ tabBarLabel: labelRenderer('お気に入り') }}>
          {() => <FavoriteList />}
        </Tab.Screen>
      </Tab.Navigator>
    </View>
  );
}
...
