...
        }}
      >
        <Stack.Screen
          name="MainTabs"
          component={MainTabs}
          options={{
            title: '😁まとめくん😁',
            headerTitleAlign: 'center',
            headerRight: hasMatsuri
              ? () => (
                  <Pressable
                    hitSlop={8}
                    onPress={() => navigationRef.navigate('Matsuri')}
...
          component={NormalWebViewScreen}
          options={({ route }) => ({ title: route.params.title })}
        />
        <Stack.Screen
          name="SelectSites"
          component={SelectSitesScreen}
          options={{ title: '表示サイトの選択' }}
        />
        <Stack.Screen
          name="SelectAvatar"
          component={SelectAvatarScreen}
          options={{ title: '画像の選択' }}
        />
...
